2005-12-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/powerpc32/setjmp-common.S [IS_IN_rtld]: Avoid
	call to __sigjmp_save.
	* sysdeps/powerpc/powerpc64/setjmp-common.S: Likewise.

	* stdlib/cxa_atexit.c: Use PTR_MANGLE on function pointer.  Fill in
	flavor field last and protect with memory barrier.
	* stdlib/on_exit.c: Likewise.
	* stdlib/cxa_finalize.c: Use PTR_DEMANGLE on function pointer before
	using it.
	* stdlib/exit.c: Likewise.

	* sysdeps/unix/sysv/linux/i386/sysdep.h: Define PTR_MANGLE and
	PTR_DEMANGLE for C code in libc.
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Likewise.

2005-12-17  Ulrich Drepper  <drepper@redhat.com>

	* elf/Versions [GLIBC_PRIVATE]: Export __pointer_chk_guard if defined.
	* elf/rtld.c: Define __pointer_chk_guard_local and if necessary
	__pointer_chk_guard.
	(_rtld_global_ro): Initialize _dl_pointer_guard.
	(dl_main): Initialize __pointer_chk_guard_local and either
	__pointer_chk_guard or TLS value if necessary.
	(process_envvars): Recognize and handle LD_POINTER_GUARD.
	* sysdeps/generic/ldsodefs.h (rtld_global_ro): Add _dl_pointer_guard.
	* sysdeps/i386/__longjmp.S: Use PTR_DEMANGLE for PC if defined.
	* sysdeps/x86_64/__longjmp.S: Likewise.
	* sysdeps/i386/bsd-_setjmp.S: Use PTR_MANGLE for PC if defined.
	* sysdeps/i386/bsd-_setjmp.S: Likewise.
	* sysdeps/i386/setjmp.S: Likewise.
	[IS_IN_rtld]: Avoid call to __sigjmp_save.
	* sysdeps/i386/setjmp.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/sysdep.h: Define PTR_MANGLE and
	PTR_DEMANGLE.
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Likewise.

	* sysdeps/i386/elf/setjmp.S: Removed.
	* sysdeps/i386/elf/bsd-setjmp.S: Removed.

	* elf/dl-error.c (_dl_catch_error): Use __sigsetgjmp instead of
	setjmp.
	* elf/dl-error.c (_dl_signal_error): Use __longjmp instead of longjmp.
	* elf/dl-minimal.c (longjmp): Remove definition.

	* sysdeps/x86_64/bsd-setjmp.S [PIC] (setjmp): Add missing jmp.

2005-12-14  Thorsten Kukuk  <kukuk@suse.de>
